--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     class="w-[430px] h-[320px] bg-orange shadow-xl rounded-lg p-3 transform rotate-3 z-10 -mt-24 z-20 hover:rotate-0 hover:scale-105 hover:z-50 hover:shadow-2xl transition-all duration-300 ease-in-out cursor-pointer">
                     <div class="p-6 h-full flex flex-col border-dashed border-[3px] rounded-lg border-white">
                         <h2 class="font-serif text-xl font-semibold mb-3 leading-tight">
-                            Neural Network Music Generator
+                            A wardrobe against over-consumption 
                         </h2>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">TensorFlow</span>
@@ -297,9 +297,7 @@
                             <span class="bg-orange-200 px-2 py-[3px] font-serif text-sm">AI</span>
                         </div>
                         <p class="text-sm font-serif leading-relaxed text-gray-800 flex-grow">
-                            Deep learning model that generates original music compositions using LSTM networks trained
-                            on
-                            classical datasets
+                            I'll talk more about this later
                         </p>
                     </div>
                 </div>
